--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <title> ✨ Personaje ✨</title>
     </head>
     <body>
-        <h1>Tokito Muichiro</h1>
+        <h1><i>🗡 Tokito Muichiro 🗡</i></h1>
+        <img src="Imagen1.jpeg" alt="576px" width="324px">
+        <br>
+        <img src="Imagen2.jpeg" alt="188px" width="268px">
+        <br>
+        <img src="Imagen3.jpeg" alt="415px" width="737px">
         
 
 
