--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <h4>A la eda de 14 años se comvirtio en el <mark>Pilar de La Niebla</mark> siendo el mas joven en perternecer a ese rango su primera aparicion fue en el capitulo 22 de la primera temporada y de hay aparecio en el arco de la villa de los herreros despertando la marca de cazador<br>
         tambien es el decentiente de uno de los creadores de una de las primeras respiraciones de las cuales varian las demas su <strong>tatara abuelo es Kokushibo</strong> la primera luna superior el cual fue el creador de la respiracion Lunar
 	</h4>
-
+<ol type="I">
+		<li style="color: teal;"><em>El primer pilar en su generacion en despertar la marca(de hay le siguio Mitsuri)</em></li>
+		<li style="color: blueviolet;">Su comida faborita es el Daikon :)</li>
+		<li style="color: navy;"><ins>Cumple años el 8 de Agosto</ins></li>
+		<li style="color: skyblue;">Despues de los susesos en la villa de los herreros empezo a recuperar sus recuerdos</li>
+		<li style="color: blueviolet;">En la batalla comntra su tatara abuelo desperto la abilidad del mundo transparente y la catana roja</li>
+		<li style="color: aliceblue;">Las timosamente murio a las 14 años a manos de su tatara abuelo</li>
+	</ol>
     </body>
 </html>
