--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<li style="color: teal;"><em>El primer pilar en su generacion en despertar la marca(de hay le siguio Mitsuri)</em></li>
 		<li style="color: blueviolet;">Su comida faborita es el Daikon :)</li>
 		<li style="color: navy;"><ins>Cumple años el 8 de Agosto</ins></li>
-		<li style="color: skyblue;">Despues de los susesos en la villa de los herreros empezo a recuperar sus recuerdos</li>
-		<li style="color: blueviolet;">En la batalla comntra su tatara abuelo desperto la abilidad del mundo transparente y la catana roja</li>
-		<li style="color: aliceblue;">Las timosamente murio a las 14 años a manos de su tatara abuelo</li>
+		<li style="color: rgb(61, 144, 177);">Despues de los susesos en la villa de los herreros empezo a recuperar sus recuerdos</li>
+		<li style="color: rgb(66, 0, 128);">En la batalla comntra su tatara abuelo desperto la abilidad del mundo transparente y la catana roja</li>
+		<li style="color: rgb(36, 97, 151);">Las timosamente murio a las 14 años a manos de su tatara abuelo</li>
 	</ol>
     </body>
 </html>
