--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         tambien es el decentiente de uno de los creadores de una de las primeras respiraciones de las cuales varian las demas su <strong>tatara abuelo es Kokushibo</strong> la primera luna superior el cual fue el creador de la respiracion Lunar
 	</h4>
 <ol type="I">
-		<li style="color: teal;"><em>El primer pilar en su generacion en despertar la marca(de hay le siguio Mitsuri)</em></li>
-		<li style="color: blueviolet;">Su comida faborita es el Daikon :)</li>
-		<li style="color: navy;"><ins>Cumple años el 8 de Agosto</ins></li>
+		<li style="color: rgb(0, 128, 128);"><em>El primer pilar en su generacion en despertar la marca(de hay le siguio Mitsuri)</em></li>
+		<li style="color: rgb(138, 43, 226);">Su comida faborita es el Daikon :)</li>
+		<li style="color: rgb(0, 0, 128);"><ins>Cumple años el 8 de Agosto</ins></li>
 		<li style="color: rgb(61, 144, 177);">Despues de los susesos en la villa de los herreros empezo a recuperar sus recuerdos</li>
 		<li style="color: rgb(66, 0, 128);">En la batalla comntra su tatara abuelo desperto la abilidad del mundo transparente y la catana roja</li>
 		<li style="color: rgb(36, 97, 151);">Las timosamente murio a las 14 años a manos de su tatara abuelo</li>
