--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     </head>
     <body>
         <h1><i>🗡 Tokito Muichiro 🗡</i></h1>
-        <img src="Imagen1.jpeg" alt="576px" width="324px">
+		<a href="https://www.tiktok.com/">
+       		<img src="Imagen1.jpeg" alt="576px" width="324px">
+		</a>
         <br>
-        <img src="Imagen2.jpeg" alt="188px" width="268px">
+		<a href="https://www.google.com/">
+        	<img src="Imagen2.jpeg" alt="188px" width="268px">
+		</a>
         <br>
-        <img src="Imagen3.jpeg" alt="415px" width="737px">
+		<a href="https://www.facebook.com/">
+        	<img src="Imagen3.jpeg" alt="415px" width="737px">
+		</a>
         <h4>A la eda de 14 años se comvirtio en el <mark>Pilar de La Niebla</mark> siendo el mas joven en perternecer a ese rango su primera aparicion fue en el capitulo 22 de la primera temporada y de hay aparecio en el arco de la villa de los herreros despertando la marca de cazador<br>
         tambien es el decentiente de uno de los creadores de una de las primeras respiraciones de las cuales varian las demas su <strong>tatara abuelo es Kokushibo</strong> la primera luna superior el cual fue el creador de la respiracion Lunar
 	</h4>
