--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     </head>
     <body>
         <h1><i>🗡 Tokito Muichiro 🗡</i></h1>
+        <a href="http://google.com/">
         <img src="Imagen1.jpeg" alt="576px" width="324px">
+        </a>
         <br>
+        <a href="https://www.tiktok.com/">
         <img src="Imagen2.jpeg" alt="188px" width="268px">
+        </a>
         <br>
+        <a href="https://www.whatsapp.com/?lang=es">
         <img src="Imagen3.jpeg" alt="415px" width="737px">
+        </a>
+        <br>
         <h4>A la eda de 14 años se comvirtio en el <mark>Pilar de La Niebla</mark> siendo el mas joven en perternecer a ese rango su primera aparicion fue en el capitulo 22 de la primera temporada y de hay aparecio en el arco de la villa de los herreros despertando la marca de cazador<br>
         tambien es el decentiente de uno de los creadores de una de las primeras respiraciones de las cuales varian las demas su <strong>tatara abuelo es Kokushibo</strong> la primera luna superior el cual fue el creador de la respiracion Lunar
 	</h4>
 <ol type="I">
-		<li style="color: rgb(0, 128, 128);"><em>El primer pilar en su generacion en despertar la marca(de hay le siguio Mitsuri)</em></li>
-		<li style="color: rgb(138, 43, 226);">Su comida faborita es el Daikon :)</li>
-		<li style="color: rgb(0, 0, 128);"><ins>Cumple años el 8 de Agosto</ins></li>
-		<li style="color: rgb(61, 144, 177);">Despues de los susesos en la villa de los herreros empezo a recuperar sus recuerdos</li>
-		<li style="color: rgb(66, 0, 128);">En la batalla comntra su tatara abuelo desperto la abilidad del mundo transparente y la catana roja</li>
-		<li style="color: rgb(36, 97, 151);">Las timosamente murio a las 14 años a manos de su tatara abuelo</li>
+		<li style="color: teal;"><em>El primer pilar en su generacion en despertar la marca(de hay le siguio Mitsuri)</em></li>
+		<li style="color: blueviolet;">Su comida faborita es el Daikon :)</li>
+		<li style="color: navy;"><ins>Cumple años el 8 de Agosto</ins></li>
+		<li style="color: skyblue;">Despues de los susesos en la villa de los herreros empezo a recuperar sus recuerdos</li>
+		<li style="color: blueviolet;">En la batalla comntra su tatara abuelo desperto la abilidad del mundo transparente y la catana roja</li>
+		<li style="color: aliceblue;">Las timosamente murio a las 14 años a manos de su tatara abuelo</li>
 	</ol>
     </body>
 </html>
