--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
         <img src="Imagen3.jpeg" alt="415px" width="737px">
         </a>
         <br>
+           <video controls autoplay loop width="500px" height="500px">
+            <source src="to1.mp4"
+            type="video/mp4">
+        </video>
+        <br>
+
+         <video controls autoplay loop width="500px" height="500px">
+            <source src="to2.mp4"
+            type="video/mp4">
+            </video>
+            <br>
+
+            <audio controls loop autoplay>
+                <source src="aud.mp3"
+                type="audio/mp3">
+            </audio>
+            <br>
         <h4>A la eda de 14 años se comvirtio en el <mark>Pilar de La Niebla</mark> siendo el mas joven en perternecer a ese rango su primera aparicion fue en el capitulo 22 de la primera temporada y de hay aparecio en el arco de la villa de los herreros despertando la marca de cazador<br>
         tambien es el decentiente de uno de los creadores de una de las primeras respiraciones de las cuales varian las demas su <strong>tatara abuelo es Kokushibo</strong> la primera luna superior el cual fue el creador de la respiracion Lunar
 	</h4>
